# newpage_assignment

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  video.webm
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5225ada06165_initial_schema.py  b8e7f1a2c3d4_add_raw_bytes_to_files.py  c1a2b3d4e5f6_add_repo_versioning.py  d2b3c4d5e6f7_files_content_addressed_unique.py  e3c4d5e6f7a8_add_file_authorship.py
backend/app/: main.py
backend/app/api/: chat.py  health.py  repos.py  source.py
backend/app/core/: cassette.py  config.py  errors.py  factory.py  instrument.py  logging.py  observability.py  progress.py  uploads.py
backend/app/db/: models.py  seed.py  session.py
backend/app/domain/: models.py  review.py
backend/app/ingestion/: clone.py  tasks.py  walk.py
backend/app/ports/: authorship.py  embedder.py  generator.py  graph_store.py  parser.py  sparse_embedder.py  vector_store.py
backend/app/prompts/: architect.py  code_review.py  critic.py  dev_search.py  faithfulness_judge.py  planner.py  propose.py  research.py  scope.py  suggestions.py  synthesis.py
backend/app/services/: agent_runner.py  ingest_service.py  suggestions.py  versioning_service.py
backend/evals/: golden.json  metrics.py  run.py
backend/sample_repo/: README.md
backend/sample_repo/notes/: __init__.py  config.py  models.py  ranking.py  service.py  store.py
backend/sample_repo/web/: api.ts
backend/tests/: fakes.py  pdf_fixture.py
backend/tests/integration/: conftest.py  test_authorship_ingest.py  test_chat_source_api.py  (+8 more)
(+134 files in other folders)
